src/parser/snapshots/rex__parser__tests__snapshot_spacing-8.snap
---
source: src/parser/mod.rs
expression: "parse(r\"1\\33\")"
---
Err(
    UnrecognizedCommand(
        "3",
    ),
)
