src/parser/snapshots/rex__parser__tests__snapshot_style_change-8.snap
---
source: src/parser/mod.rs
expression: "parse(r\"1\\sqrt{\\displaystyle s}1\")"
---
Ok(
    [
        Symbol(
            Symbol {
                codepoint: '1',
                atom_type: Alpha,
            },
        ),
        Radical(
            Radical {
                inner: [
                    Style(
                        Display,
                    ),
                    Symbol(
                        Symbol {
                            codepoint: '𝑠',
                            atom_type: Alpha,
                        },
                    ),
                ],
                character: '√',
            },
        ),
        Symbol(
            Symbol {
                codepoint: '1',
                atom_type: Alpha,
            },
        ),
    ],
)
