src/parser/snapshots/rex__parser__tests__snapshot_substack-3.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\begin{array}{c}\\substack{1 \\\\ \\frac{7}8 \\\\ 4} \\\\ 5 \\end{array}\")"
---
Ok(
    [
        Array(
            Array {
                col_format: ArrayColumnsFormatting {
                    alignment: [
                        Centered,
                    ],
                    separators: [
                        [],
                        [],
                    ],
                },
                rows: [
                    [
                        [
                            Stack(
                                Stack {
                                    atom_type: Inner,
                                    lines: [
                                        [
                                            Symbol(
                                                Symbol {
                                                    codepoint: '1',
                                                    atom_type: Alpha,
                                                },
                                            ),
                                        ],
                                        [
                                            GenFraction(
                                                GenFraction {
                                                    numerator: [
                                                        Symbol(
                                                            Symbol {
                                                                codepoint: '7',
                                                                atom_type: Alpha,
                                                            },
                                                        ),
                                                    ],
                                                    denominator: [
                                                        Symbol(
                                                            Symbol {
                                                                codepoint: '8',
                                                                atom_type: Alpha,
                                                            },
                                                        ),
                                                    ],
                                                    bar_thickness: Default,
                                                    left_delimiter: None,
                                                    right_delimiter: None,
                                                    style: NoChange,
                                                },
                                            ),
                                        ],
                                        [
                                            Symbol(
                                                Symbol {
                                                    codepoint: '4',
                                                    atom_type: Alpha,
                                                },
                                            ),
                                        ],
                                    ],
                                },
                            ),
                        ],
                    ],
                    [
                        [
                            Symbol(
                                Symbol {
                                    codepoint: '5',
                                    atom_type: Alpha,
                                },
                            ),
                        ],
                    ],
                ],
                left_delimiter: None,
                right_delimiter: None,
                extra_row_sep: None,
            },
        ),
    ],
)
