src/parser/snapshots/rex__parser__tests__snapshot_substack-4.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\substack{1 \\\\}\")"
---
Ok(
    [
        Stack(
            Stack {
                lines: [
                    [
                        Symbol(
                            Symbol {
                                codepoint: '1',
                                atom_type: Alpha,
                            },
                        ),
                    ],
                ],
            },
        ),
    ],
)
