src/parser/snapshots/rex__parser__tests__snapshot_substack-5.snap
---
source: src/parser/mod.rs
expression: "parse(r\"1 \\substack{}\")"
---
Ok(
    [
        Symbol(
            Symbol {
                codepoint: '1',
                atom_type: Alpha,
            },
        ),
        Stack(
            Stack {
                lines: [],
            },
        ),
    ],
)
