src/parser/snapshots/rex__parser__tests__snapshot_substack-6.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\substack{ 1 \\\\ 2}\\\\\")"
---
Err(
    ExpectedEof(
        Command(
            "\\",
        ),
    ),
)
