src/parser/snapshots/rex__parser__tests__snapshot_substack-7.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\substack \\alpha \\\\ 1\")"
---
Err(
    StackMustFollowGroup,
)
