src/parser/snapshots/rex__parser__tests__snapshot_substack-8.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\substack{ 1 \\\\ 1\")"
---
Err(
    NoClosingBracket,
)
