src/parser/snapshots/rex__parser__tests__snapshot_substack.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\substack{   1 \\\\ 2}\")"
---
Ok(
    [
        Stack(
            Stack {
                lines: [
                    [
                        Symbol(
                            Symbol {
                                codepoint: '1',
                                atom_type: Alpha,
                            },
                        ),
                    ],
                    [
                        Symbol(
                            Symbol {
                                codepoint: '2',
                                atom_type: Alpha,
                            },
                        ),
                    ],
                ],
            },
        ),
    ],
)
