src/parser/snapshots/rex__parser__tests__snapshot_symbols-4.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\mathrm A\")"
---
Ok(
    [
        Symbol(
            Symbol {
                codepoint: 'A',
                atom_type: Alpha,
            },
        ),
    ],
)
