src/parser/snapshots/rex__parser__tests__snapshot_symbols-5.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\mathfrak A\")"
---
Ok(
    [
        Symbol(
            Symbol {
                codepoint: '𝔄',
                atom_type: Alpha,
            },
        ),
    ],
)
