src/parser/snapshots/rex__parser__tests__snapshot_symbols-8.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\le\")"
---
Ok(
    [
        Symbol(
            Symbol {
                codepoint: '<',
                atom_type: Relation,
            },
        ),
    ],
)
